<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/adviceFragment"
        android:icon="@drawable/ic_advice"
        android:title="@string/nav_advice" />
    <item
        android:id="@+id/alarmFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/nav_alarm" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_man"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>