<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_activity_background_shape"
    tools:context=".Login">

    <ImageView
        android:id="@+id/icon_iv"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/covid19_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/allan_bold"
        android:text="@string/login_tv_covid_19_tracker"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/icon_iv"
        app:layout_constraintStart_toStartOf="@id/icon_iv"
        app:layout_constraintTop_toBottomOf="@id/icon_iv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/login_layout_round_shape"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/covid19_tv"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/syndrome_tv_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/syndrome_answer"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@id/view2"
                app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/theQuestion"
                    app:layout_constraintStart_toStartOf="@id/syndrome1_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome1_tv"
                    android:text="@string/the_question"
                    android:textColor="#2196F3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:textSize="22sp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/syndrome1_tv"
                    app:layout_constraintStart_toStartOf="@id/syndrome_description1_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome_description1_tv"
                    android:text="@string/syndrome1"
                    android:textColor="#F40A0A"
                    android:textSize="22sp"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/syndrome_description1_tv"
                    app:layout_constraintStart_toStartOf="@id/syndrome2_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome2_tv"
                    android:textColor="#000000"
                    android:text="@string/syndrome_description1"
                    android:textSize="22sp"
                    android:paddingStart="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_9sdp"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/syndrome2_tv"
                    app:layout_constraintStart_toStartOf="@id/syndrome_description2_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome_description2_tv"
                    android:text="@string/syndrome2"
                    android:textColor="#F40A0A"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/syndrome_description2_tv"
                  app:layout_constraintStart_toStartOf="@id/syndrome3_tv"
                  app:layout_constraintBottom_toTopOf="@id/syndrome3_tv"
                  android:text="@string/syndrome_description2"
                  android:textColor="#000000"
                  android:textSize="22sp"
                  android:paddingStart="@dimen/_9sdp"
                  android:paddingEnd="@dimen/_9sdp"
                  android:textStyle="normal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/syndrome3_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome_description3_tv"
                    app:layout_constraintStart_toStartOf="@id/syndrome_description3_tv"
                    android:text="@string/syndrome3"
                    android:textColor="#F40A0A"
                    android:textSize="22sp"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/syndrome_description3_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_100sdp"
                    android:paddingStart="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_9sdp"
                    android:text="@string/syndrome_description3"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    app:layout_constraintTop_toTopOf="@id/syndrome3_tv"
                    app:layout_constraintBottom_toTopOf="@id/syndrome_btn_yes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/syndrome_btn_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/yes_i_have"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="@dimen/_16sdp"
                    app:layout_constraintEnd_toStartOf="@id/syndrome_btn_no"
                    app:layout_constraintStart_toStartOf="@id/syndrome_description3_tv"
                    app:layout_constraintTop_toBottomOf="@id/syndrome_description3_tv" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/syndrome_btn_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/no_i_havent"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:cornerRadius="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@id/syndrome_description3_tv"
                    app:layout_constraintStart_toEndOf="@id/syndrome_btn_yes"
                    app:layout_constraintTop_toBottomOf="@id/syndrome_description3_tv" />

<!--                <View-->
<!--                    android:id="@+id/view1"-->
<!--                    android:layout_width="match_parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/syndrome_btn_yes"-->
<!--                    android:layout_height="@dimen/_1sdp"/>-->
<!--                <View-->
<!--                    android:id="@+id/view2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/syndrome_btn_no"-->
<!--                    android:layout_height="@dimen/_1sdp"/>-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>