<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_activity_background_shape"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/allan_bold"
        android:text="@string/login_tv_covid_19_tracker"
        android:textColor="#fff"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/login_layout_round_shape"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_tv_register_now"
            android:textColor="@color/colorPrimaryNew"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_text_input_layout_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/signup_et_hint_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_text_input_et_full_name"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:ems="10"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_text_input_layout_ssn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/signup_et_hint_ssn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_text_input_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_text_input_layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/signup_et_hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_text_input_et_ssn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:id="@+id/signup_text_input_layout_password"-->
        <!--            android:layout_marginTop="@dimen/_8sdp"-->
        <!--            android:hint="@string/signup_et_hint_password"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--            app:passwordToggleEnabled="true"-->
        <!--            >-->
        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:id="@+id/signup_text_input_et_password"-->

        <!--                />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn_register"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/signup_btn_register"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="@dimen/_30sdp" />
    </LinearLayout>


</LinearLayout>